--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "test": "umi test",
+    "start": "cross-env SPARROW_ENVIRONMENT=ontest umi dev",
+    "start:online": "cross-env SPARROW_ENVIRONMENT=online umi dev",
+    "build": "cross-env SPARROW_ENVIRONMENT=ontest umi build",
+    "build:online": "cross-env SPARROW_ENVIRONMENT=online umi build",
+    "test": "cross-env SPARROW_ENVIRONMENT=ontest umi test",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "lint-staged"
   },
+  "dependencies": {
+    "koa": "^2.5.1",
+    "koa-compress": "^3.0.0",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "mockjs": "^1.0.1-beta3"
+  },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^0.1.5",
     "eslint-plugin-flowtype": "^2.50.0",
@@ -17,11 +28,14 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
-    "umi": "^2.0.0-0",
-    "umi-plugin-react": "^1.0.0-0"
+    "umi": "^2.0.3",
+    "umi-plugin-react": "^1.0.3"
   },
   "lint-staged": {
-    "*.{js,jsx}": ["eslint --fix", "git add"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">=8.0.0"
